<resources>
    <string name="app_name">Weather</string>

    <string name="search">Search</string>
    <string name="powered_by_google" translatable="false">powered by google</string>
    <string name="current_location">Current location</string>

    <string name="hPa">hPa</string>
    <string name="Ms">m/s</string>
    <string name="Kph">kph</string>
    <string name="Mph">mph</string>
    <string name="inHg">inHg</string>
    <string name="mmHg">mm Hg</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="no_data">No data</string>
    <string name="feels_like">feels like</string>
    <string name="calm">Calm</string>

    <string name="north">N</string>
    <string name="west">W</string>
    <string name="east">E</string>
    <string name="south">S</string>
    <string name="northwest">NW</string>
    <string name="northeast">NE</string>
    <string name="southeast">SE</string>
    <string name="southwest">SW</string>

    <string name="failed_update_no_connection">Update failed, check network connectivity</string>
    <string name="failed_update">Failed to update data</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="failed_geo">Failed to load geodata</string>
    <string name="failed_apixu">Unable to get data from Apixu.com</string>

    <string name="delete">Delete</string>

    <string name="temperature">Temperature:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="forecast_for_10_days">Forecast for 10 days</string>
    <string name="no_network_connection">No network connection</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="settings">Settings</string>
    <string name="wind_speed">Wind speed</string>

    <string name="settings_notification_title">Weather in the notification bar</string>
    <string name="hourly_long_press">Long press on the hourly forecast to view details</string>
</resources>
