<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wind_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_bottom"
        android:text="@string/wind_speed" />

    <RadioGroup
        android:id="@+id/wind_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ms"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Mph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mph"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Kph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kph"
            android:textSize="18sp" />

    </RadioGroup>
</LinearLayout>