<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/temperature_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_bottom"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/temperature_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_settings_title">

        <RadioButton
            android:id="@+id/fahrenheit"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="F°" />

        <RadioButton
            android:id="@+id/celsius"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="C°"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/wind_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_bottom"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_group" />

    <RadioGroup
        android:id="@+id/wind_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_settings_title">

        <RadioButton
            android:id="@+id/ms"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/Ms" />

        <RadioButton
            android:id="@+id/Mph"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Mph" />

        <RadioButton
            android:id="@+id/Kph"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Kph" />

    </RadioGroup>

    <TextView
        android:id="@+id/pressure_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_bottom"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_group" />

    <RadioGroup
        android:id="@+id/pressure_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_settings_title">

        <RadioButton
            android:id="@+id/mmHH"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            tools:text="дюйм рт. ст."
            android:text="@string/mmHg"/>

        <RadioButton
            android:id="@+id/hPa"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/hPa"/>

        <RadioButton
            android:id="@+id/inHg"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/inHg"
            android:layout_marginStart="24dp"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>