<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/colorPrimary"
    tools:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        tools:srcCompat="@drawable/w_1201_day_static" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/icon"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        tools:text="+150°" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        tools:text="Ростов-на-Дону, Ленинскпй район" />

    <TextView
        android:id="@+id/wind_title"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/temperature"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="@string/wind" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wind_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/wind_title"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="50" />

    <TextView
        android:id="@+id/wind_speed_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wind_speed"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/wind_speed"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="m/s" />

    <TextView
        android:id="@+id/wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wind_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/wind_speed_units"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="SW" />

    <TextView
        android:id="@+id/pressure_title"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wind_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/temperature"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="@string/pressure" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wind_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/pressure_title"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="766" />

    <TextView
        android:id="@+id/pressure_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pressure_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/pressure"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        tools:text="@string/mmHg" />
</RelativeLayout>